--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "CI=false npm run build"
   publish="client/build/"
   base = "client/"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
