--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "CI=false npm run build"
-  publish="client/build/"
   base = "client/"
+  publish="./build/"
 
 [[redirects]]
   from = "/*"
