--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "lodash": "^4.17.20",
-    "lt-spaced-repetition-js": "^2.0.2",
+    "lt-spaced-repetition-js": "^2.0.3",
     "query-string": "^6.13.6",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
